backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: MONGO_CONN_STR
              value: mongodb://mongodb:27017/expensetracker
            - name: PORT
              value: "3500"
          image: backend
          name: expense-backend
          ports:
            - containerPort: 3500
              protocol: TCP
      restartPolicy: Always
