frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: REACT_APP_BACKEND_URL
              value: http://localhost:3500/api/expenses
          image: frontend
          name: expense-frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
