backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "3500"
      port: 3500
      targetPort: 3500
  selector:
    io.kompose.service: backend
